frontend: raise a bit font size default, improve img loading by css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -123,7 +123,7 @@
                                 <source media="(max-height: 480px)" type="image/webp"
                                         srcset="images/ArduPilot-Motto.webp">
                                 <source media="(max-height: 480px)" type="image/png" srcset="images/ArduPilot-Motto.png">
-                                <img src="images/ArduPilot-Motto.png" alt="ArduPilot" class="img-fluid img-thumbnail col_min" loading="lazy" style="aspect-ratio: 4/3;">
+                                <img src="images/ArduPilot-Motto.png" alt="ArduPilot" class="img-fluid img-thumbnail col_min" loading="lazy">
                                 Loading Blog post
                             </picture>
                         </a>
@@ -134,7 +134,7 @@
                                 <source media="(max-height: 480px)" type="image/webp"
                                         srcset="images/ArduPilot-Motto.webp">
                                 <source media="(max-height: 480px)" type="image/png" srcset="images/ArduPilot-Motto.png">
-                                <img src="images/ArduPilot-Motto.png" alt="ArduPilot" class="img-fluid img-thumbnail col_min" loading="lazy" style="aspect-ratio: 4/3;">
+                                <img src="images/ArduPilot-Motto.png" alt="ArduPilot" class="img-fluid img-thumbnail col_min" loading="lazy">
                                 Loading Blog post
                             </picture>
                         </a>
@@ -145,42 +145,7 @@
                                 <source media="(max-height: 480px)" type="image/webp"
                                         srcset="images/ArduPilot-Motto.webp">
                                 <source media="(max-height: 480px)" type="image/png" srcset="images/ArduPilot-Motto.png">
-                                <img src="images/ArduPilot-Motto.png" alt="ArduPilot" class="img-fluid img-thumbnail col_min" loading="lazy" style="aspect-ratio: 4/3;">
-                                Loading Blog post
-                            </picture>
-                        </a>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <a class="d-block mb-4 h-100 text-dark embed-responsive">
-                            <picture>
-                                <source media="(max-height: 480px)" type="image/webp"
-                                        srcset="images/ArduPilot-Motto.webp">
-                                <source media="(max-height: 480px)" type="image/png" srcset="images/ArduPilot-Motto.png">
-                                <img src="images/ArduPilot-Motto.png" alt="ArduPilot" class="img-fluid img-thumbnail col_min" loading="lazy" style="aspect-ratio: 4/3;">
-                                Loading Blog post
-                            </picture>
-                        </a>
-                    </div>
-                    <div class="col-md-4">
-                        <a class="d-block mb-4 h-100 text-dark embed-responsive">
-                            <picture>
-                                <source media="(max-height: 480px)" type="image/webp"
-                                        srcset="images/ArduPilot-Motto.webp">
-                                <source media="(max-height: 480px)" type="image/png" srcset="images/ArduPilot-Motto.png">
-                                <img src="images/ArduPilot-Motto.png" alt="ArduPilot" class="img-fluid img-thumbnail col_min" loading="lazy" style="aspect-ratio: 4/3;">
-                                Loading Blog post
-                            </picture>
-                        </a>
-                    </div>
-                    <div class="col-md-4">
-                        <a class="d-block mb-4 h-100 text-dark embed-responsive">
-                            <picture>
-                                <source media="(max-height: 480px)" type="image/webp"
-                                        srcset="images/ArduPilot-Motto.webp">
-                                <source media="(max-height: 480px)" type="image/png" srcset="images/ArduPilot-Motto.png">
-                                <img src="images/ArduPilot-Motto.png" alt="ArduPilot" class="img-fluid img-thumbnail col_min" loading="lazy" style="aspect-ratio: 4/3;">
+                                <img src="images/ArduPilot-Motto.png" alt="ArduPilot" class="img-fluid img-thumbnail col_min" loading="lazy">
                                 Loading Blog post
                             </picture>
                         </a>
@@ -193,7 +158,7 @@
                                 <source media="(max-height: 480px)" type="image/webp"
                                         srcset="images/ArduPilot-Motto.webp">
                                 <source media="(max-height: 480px)" type="image/png" srcset="images/ArduPilot-Motto.png">
-                                <img src="images/ArduPilot-Motto.png" alt="ArduPilot" class="img-fluid img-thumbnail col_min" loading="lazy" style="aspect-ratio: 4/3;">
+                                <img src="images/ArduPilot-Motto.png" alt="ArduPilot" class="img-fluid img-thumbnail col_min" loading="lazy">
                                 Loading Blog post
                             </picture>
                         </a>
@@ -204,7 +169,7 @@
                                 <source media="(max-height: 480px)" type="image/webp"
                                         srcset="images/ArduPilot-Motto.webp">
                                 <source media="(max-height: 480px)" type="image/png" srcset="images/ArduPilot-Motto.png">
-                                <img src="images/ArduPilot-Motto.png" alt="ArduPilot" class="img-fluid img-thumbnail col_min" loading="lazy" style="aspect-ratio: 4/3;">
+                                <img src="images/ArduPilot-Motto.png" alt="ArduPilot" class="img-fluid img-thumbnail col_min" loading="lazy">
                                 Loading Blog post
                             </picture>
                         </a>
@@ -215,7 +180,42 @@
                                 <source media="(max-height: 480px)" type="image/webp"
                                         srcset="images/ArduPilot-Motto.webp">
                                 <source media="(max-height: 480px)" type="image/png" srcset="images/ArduPilot-Motto.png">
-                                <img src="images/ArduPilot-Motto.png" alt="ArduPilot" class="img-fluid img-thumbnail col_min" loading="lazy" style="aspect-ratio: 4/3;">
+                                <img src="images/ArduPilot-Motto.png" alt="ArduPilot" class="img-fluid img-thumbnail col_min" loading="lazy">
+                                Loading Blog post
+                            </picture>
+                        </a>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-4">
+                        <a class="d-block mb-4 h-100 text-dark embed-responsive">
+                            <picture>
+                                <source media="(max-height: 480px)" type="image/webp"
+                                        srcset="images/ArduPilot-Motto.webp">
+                                <source media="(max-height: 480px)" type="image/png" srcset="images/ArduPilot-Motto.png">
+                                <img src="images/ArduPilot-Motto.png" alt="ArduPilot" class="img-fluid img-thumbnail col_min" loading="lazy">
+                                Loading Blog post
+                            </picture>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a class="d-block mb-4 h-100 text-dark embed-responsive">
+                            <picture>
+                                <source media="(max-height: 480px)" type="image/webp"
+                                        srcset="images/ArduPilot-Motto.webp">
+                                <source media="(max-height: 480px)" type="image/png" srcset="images/ArduPilot-Motto.png">
+                                <img src="images/ArduPilot-Motto.png" alt="ArduPilot" class="img-fluid img-thumbnail col_min" loading="lazy">
+                                Loading Blog post
+                            </picture>
+                        </a>
+                    </div>
+                    <div class="col-md-4">
+                        <a class="d-block mb-4 h-100 text-dark embed-responsive">
+                            <picture>
+                                <source media="(max-height: 480px)" type="image/webp"
+                                        srcset="images/ArduPilot-Motto.webp">
+                                <source media="(max-height: 480px)" type="image/png" srcset="images/ArduPilot-Motto.png">
+                                <img src="images/ArduPilot-Motto.png" alt="ArduPilot" class="img-fluid img-thumbnail col_min" loading="lazy">
                                 Loading Blog post
                             </picture>
                         </a>
@@ -650,12 +650,11 @@
 
                     if (val.has_image) {
                         const img = document.createElement('img');
-                        img.classList.add("img-fluid", "img-thumbnail");
+                        img.classList.add("img-fluid", "img-thumbnail", "col_min");
                         img.src = val.image;
                         img.loading = "lazy";
                         img.style.maxWidth = "640px";
                         img.style.width = "100%";
-                        img.style.aspectRatio = "4/3";
                         //img.alt = val.title;
 
                         anchor.innerHTML = '';
@@ -663,12 +662,11 @@
                     } else if (isValidUrl(val.youtube_link)) {
                         const iframe = document.createElement('iframe');
                         anchor.classList.add("embed-responsive");
-                        iframe.classList.add("embed-responsive-item", "img-thumbnail");
+                        iframe.classList.add("embed-responsive-item", "img-thumbnail", "col_min");
                         //iframe.src = val.youtube_link;
                         iframe.title = val.title;
                         iframe.style.maxWidth = "640px";
                         iframe.style.width = "100%";
-                        iframe.style.aspectRatio = "4/3";
                         iframe.loading = "lazy";
                         const youtubeUrl = new URL(val.youtube_link);
                         const videoId = youtubeUrl.pathname.split('/')[2];
@@ -710,7 +708,6 @@
                         img.alt = 'ArduPilot';
                         img.className = 'img-fluid img-thumbnail col_min';
                         img.loading = 'lazy';
-                        img.style.aspectRatio = '4/3';
                         img.textContent = 'Loading Blog post';
                         picture.appendChild(source1);
                         picture.appendChild(source2);
