frontend: add some nofollow to link to not ardupilot websites

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -264,13 +264,13 @@
                         <h3 class="panel-title">Facebook ArduPilot group</h3>
                     </div>
                     <div class="panel-body">
-                        <a href="https://www.facebook.com/groups/ArduPilot.org/">Facebook ArduPilot group</a> have
+                        <a href="https://www.facebook.com/groups/ArduPilot.org/" rel="nofollow">Facebook ArduPilot group</a> have
                         several post
                         with most recent community cases.
 
                         <br><br><br>
 
-                        <a href="https://www.facebook.com/groups/ArduPilot.org/">
+                        <a href="https://www.facebook.com/groups/ArduPilot.org/" rel="nofollow">
                             <picture>
                                 <source type="image/webp" srcset="images/FaceBookArduPilot.webp">
                                 <source type="image/jpeg" srcset="images/FaceBookArduPilot.png">
@@ -289,13 +289,13 @@
                         <h3 class="panel-title">Discord</h3>
                     </div>
                     <div class="panel-body">
-                        Developing questions? Check our <a href="https://ardupilot.org/discord">discord channels</a> and
+                        Developing questions? Check our <a href="https://ardupilot.org/discord" rel="nofollow">discord channels</a> and
                         exchange
                         your coding questions with other developers.
 
                         <br><br>
 
-                        <a href="https://ardupilot.org/discord">
+                        <a href="https://ardupilot.org/discord" rel="nofollow">
                             <picture>
                                 <source type="image/webp" srcset="images/discord_mini.webp">
                                 <source type="image/jpeg" srcset="images/discord_mini.png">
@@ -598,7 +598,7 @@
         <div class="alert alert-warning" role="alert">
             <strong>Warning!</strong> Every country has different regulations governing the operation of remote
             controlled
-            and/or autonomous vehicles. <a href="https://droneregulations.info">This database</a> has country specific
+            and/or autonomous vehicles. <a href="https://droneregulations.info" rel="nofollow">This database</a> has country specific
             information, but it is every operator's responsibility to be seek out and be aware of local, regional, and
             federal
             regulations.
