frontend: use aria-label instead of visually-hidden

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -87,13 +87,11 @@
                 </div>
             </div>
 
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselPictures" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselPictures" data-bs-slide="prev" aria-label="Previous">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselPictures" data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselPictures" data-bs-slide="next" aria-label="Next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
             </button>
 
         </div>
